# ma1sd-extender

./: Dockerfile  README.md  docker-entrypoint.sh
.github/workflows/: docker-image.yml
api/: .flake8  pyproject.toml
api/ma1sd-extender/: main.py  search.py
app/: pyproject.toml
app/ma1sd-extender/: main.py  models.py
